책 등록하기, 책 목록보기 에러처리, 리스트 타입 말고 오브젝트타입으로 응답보내기